# django-ntfy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.gitlab/: build-and-release.yml  pre-commit.yml  run-tests.yml
django_ntfy/: __init__.py
tests/: conftest.py  settings.py  test_email_backend.py  test_exponential_ratelimit_backends.py  test_ntfy_backend.py  test_smtp_backend.py
